Write up all text content in HTML

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
         <h1>Discover hidden places in the world around you</h1>
         <a href="#">Download Excursion (Coming soon!)</a>
     </header>
+    <div class="mock-phone">
+
+    </div>
+    <div class="description">
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <div class="img-container"></div>
+    </div>
+    <div class="soon">
+        <div class="img-container">
+
+        </div>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="#">Download Excursion (Coming soon!</a>
+    </div>
+    <footer>
+        <h5>© Excursion</h5>
+    </footer>
 </body>
 
 </html>
