--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Excursion</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
 </head>
 
 <body>
@@ -12,22 +12,34 @@
         <a href="#">Download Excursion (Coming soon!)</a>
     </header>
     <div class="mock-phone">
-
+        <div class="media-container">
+            <p>
+                <video autoplay muted>
+                    <source src="./resources/videos/excursion.mp4" type="video/mp4">
+                </video>
+            </p>
+        </div>
     </div>
     <div class="description">
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-        <div class="img-container"></div>
     </div>
     <div class="soon">
-        <div class="img-container">
-
+        <div class="media-container">
+            <p>
+                <img src="./resources/images/camp.jpg" />
+            </p>
+        </div>
+        <div class="media-container">
+            <p>
+                <img src="./resources/images/phone.png" />
+            </p>
         </div>
         <h2>Coming Soon for iPhone and Android</h2>
         <a href="#">Download Excursion (Coming soon!</a>
     </div>
     <footer>
-        <h5>© Excursion</h5>
+        <p id="copyright">© Excursion</p>
     </footer>
 </body>
 
